Fixed off center navigation items

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -26,7 +26,6 @@ nav.navigation.desktop {
       display: block;
       position: relative;
       &.cart {
-        position: absolute;
         span {
           position: absolute;
           top: 5px;
